# texto-seguro

./: .gitignore  README.md  package-lock.json  package.json
src/: home.html  index.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: comandos.rs  crypto.rs  main.rs  offline.rs
src-tauri/windows/: installer.nsh
src/css/: css.css
src/js/: funcoes.js  js.js  login.js  window.js
