[package]
name = "texto-seguro"
version = "0.1.1"
description = "Programa de armazenamento de textos"
authors = ["jorge-henrique"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.0"
zeroize = "1.8.2"
tauri-plugin-http = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
lazy_static = "1.4"
once_cell = "1.19"
tauri-plugin-shell = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
